--- a/textField/index.html
+++ b/textField/index.html
@@ -43,7 +43,7 @@
 <pre class="lang-xml"><code><span class="cm-tagcm-bracket">&lt;</span><span class="cm-tag">label</span><span class="cm-tagcm-bracket">&gt;</span>备注：<span class="cm-tagcm-bracket">&lt;</span><span class="cm-tag">textField</span> <span class="cm-attribute">placeholder</span>=<span class="cm-string">&quot;请输入备注&quot;</span> <span class="cm-tagcm-bracket">/&gt;</span><span class="cm-tagcm-bracket">&lt;/</span><span class="cm-tag">label</span><span class="cm-tagcm-bracket">&gt;</span>
 </code></pre>
 <h3 id="验证">验证</h3>
-<p>关于表单验证，详细请参见<a href="https://regular-ui.github.io/ui-field/validation/index.html">表单验证</a>组件。</p>
+<p>关于表单验证，详见<a href="https://regular-ui.github.io/ui-field/validation/index.html">表单验证组件</a>。</p>
 <div class="m-example"></div>
 
 <pre class="lang-xml"><code><span class="cm-tagcm-bracket">&lt;</span><span class="cm-tag">label</span><span class="cm-tagcm-bracket">&gt;</span>邮箱：<span class="cm-tagcm-bracket">&lt;</span><span class="cm-tag">textField</span> <span class="cm-attribute">rules</span>=<span class="cm-attribute">{rules}</span> <span class="cm-attribute">maxlength</span>=<span class="cm-attribute">20</span> <span class="cm-tagcm-bracketcm-error">/&gt;</span><span class="cm-tagcm-bracket">&lt;/</span><span class="cm-tag">label</span><span class="cm-tagcm-bracket">&gt;</span>
