--- a/validation/index.html
+++ b/validation/index.html
@@ -534,7 +534,7 @@
         </thead>
         <tbody>
             
-                <tr><td class="f-wsn"><code>conclusion</code></td><td class="f-wsn">object</td><td colspan="2">结论</td></tr>
+                <tr><td class="f-tac" colspan="4">无返回值</td></tr>
             
         </tbody>
     </table>
